Fix publication strip inner alignment to page grid

--- a/assets/css/cdd-article-template.css
+++ b/assets/css/cdd-article-template.css
@@ -91,6 +91,10 @@ a { color: var(--qing-dark); }
 }
 
 .cdd-topline__inner {
+  width: calc(100% - 128px);
+  max-width: 1440px;
+  margin-left: auto;
+  margin-right: auto;
   padding: 11px 0;
   display: flex;
   align-items: center;
@@ -344,6 +348,10 @@ a { color: var(--qing-dark); }
   .cdd-page {
     width: calc(100% - 80px);
   }
+
+  .cdd-topline__inner {
+    width: calc(100% - 80px);
+  }
 }
 
 @media (min-width: 981px) {
@@ -443,6 +451,10 @@ a { color: var(--qing-dark); }
 
 @media (max-width: 767px) {
   .cdd-page {
+    width: calc(100% - 32px);
+  }
+
+  .cdd-topline__inner {
     width: calc(100% - 32px);
   }
 
@@ -552,6 +564,9 @@ a { color: var(--qing-dark); }
   }
 
   .cdd-topline__inner {
+    width: 100%;
+    max-width: none;
+    margin: 0;
     padding: 0 0 6mm;
   }
 
